--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,9 @@
     <string name="frag_connect_disconnect">Disconnect</string>
     <string name="frag_connect_guide_slide_index">Guide Slide # %1$d</string>
     <string name="frag_connect_connecting_to_network">Connecting to the\nTor Network…</string>
+    <string name="app_routing">App Routing</string>
+    <string name="app_routing_protect_all">Protect all my apps</string>
+    <string name="app_routing_tor_apps">Tor powered apps</string>
+    <string name="lorem_ipsum_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod…</string>
 
 </resources>
