--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">Tor with Arti</string>
     <string name="nav_connect">Connect</string>
-    <string name="nav_support">Support</string>
-    <string name="nav_settings">Settings</string>
+    <string name="nav_configure">Configure</string>
     <string name="frag_connect_explore_pri">Explore. Privately.</string>
     <string name="frag_connect_you_re_read">You\'re ready for the world\'s most private browsing experience.</string>
     <string name="frag_connect_connect">Connect</string>
