-optimized transition animations into single av_* drawables. -Moved back toolbar from MainActivity to ConnectFragment as the progressbar is only heavily used in ConnectFragment. -ConnectFragmentViewModel optimized, made it reactive with StateFlow and solved animation discrepancy in case of stopping and resuming activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,13 @@
     <string name="frag_connect_guide_slide_index">Guide Slide # %1$d</string>
     <string name="frag_connect_connecting_to_network">Connecting to the\nTor Network…</string>
     <string name="frag_connect_connected">Connected\n</string>
+    <string name="frag_connect_connecting">Connecting</string>
+    <string name="frag_connect_paused">Paused</string>
+    <string name="frag_connect_disconnecting">Disconnecting</string>
+    <string name="frag_connect_try_again">Trying again…</string>
     <string name="frag_connect_not_connected">Not connected</string>
+    <string name="frag_connect_disconnected">Disconnected</string>
+    <string name="frag_connect_reconnect">Reconnect</string>
     <string name="frag_connect_cannot_connected">Can\'t connect to Tor</string>
     <string name="frag_connect_try_bridge">Try a bridge instead</string>
     <string name="frag_connect_error_content">Trying a bridge could help unblock the Internet in places experiencing censorship.</string>
