--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,9 @@
     <string name="circuits_app_description">Circuits for %1$s</string>
     <string name="this_browser">This browser</string>
     <string name="this_app">This app</string>
+    <string name="tor_powered_app">Tor-powered app</string>
+    <string name="description_independend_tor_powered_app">This app uses its own Tor connection, independent of the Tor VPN. View and configure its connection in %1$s instead.</string>
+    <string name="action_open_app">Open %1$s</string>
 
     <!-- logging related -->
     <string name="bootstrap_at">Bootstrap at: %1$s</string>
