--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="tor_powered_app">Tor-powered app</string>
     <string name="description_independend_tor_powered_app">This app uses its own Tor connection, independent of the Tor VPN. View and configure its connection in %1$s instead.</string>
     <string name="action_open_app">Open %1$s</string>
+    <string name="guard">Guard</string>
 
     <!-- logging related -->
     <string name="bootstrap_at">Bootstrap at: %1$s</string>
