add missing 'Circuits' section header in app detail screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,7 @@
     <string name="connect_direct_to_tor">Connect directly to Tor</string>
 
     <string name="idle_toolbar_title">Tor VPN</string>
+    <string name="circuits">Circuits</string>
 
 
 </resources>
