--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,10 +48,10 @@
     <string name="guide_bullet_text_1">Don\'t forget to report any bugs you find back to our developers.</string>
     <string name="guide_bullet_text_2">This is a pre-release version of the app, and is not safe to use for sensitive activities.</string>
 
-    <!-- Download statistics, e.g 1.23 MB down -->
-    <string name="stats_down">%1$s</string>
-    <!-- Upload statistics, e.g 1.23 MB up -->
-    <string name="stats_up">%1$s</string>
+    <!-- Download statistics, e.g 1.23 MB -->
+    <string name="stats_down" translatable="false">%1$s</string>
+    <!-- Upload statistics, e.g 1.23 MB -->
+    <string name="stats_up" translatable="false">%1$s</string>
     <!-- Download or upload per second, e.g. 0.54 KB/s -->
     <string name="stats_delta">%1$s/s</string>
     <!-- combined up- and download statistics -->
