--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,6 +112,9 @@
     <string name="built_in_bridges">Choose a built-in bridge</string>
     <string name="obfs4" translatable="false">obfs4</string>
     <string name="snowflake">Snowflake</string>
+    <string name="obfs4_built_in">obfs4 (built-in)</string>
+    <string name="snowflake_built_in">Snowflake (built-in)</string>
+    <string name="none">None</string>
     <string name="obfs4_description">Makes your traffic look like random data</string>
     <string name="snowflake_description">Routes your connection through Snowflake proxies to make it look like you\'re placing a video call</string>
     <string name="add_new_bridge">Add a new bridge</string>
@@ -119,6 +122,7 @@
     <string name="bridge_address_description">Add a bridge provided by a trusted organization or someone you know</string>
     <string name="bridge_addresses">Bridge addresses</string>
     <string name="action_paste_bridges">Paste your bridge addresses here</string>
+    <string name="manual_bridge">Manual selection</string>
 
     <plurals name="n_bridges">
         <item quantity="one">%1$s bridge added</item>
