implement basic launcher icon and name selection, use dummy strings and images for now

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,15 @@
 <resources>
     <string name="app_name">Tor VPN</string>
 
+    <!-- alternative app names are not translated until we know which app names we actually want -->
+    <string name="app_name_variant_1" translatable="false">Weather</string>
+    <string name="app_name_variant_2" translatable="false">Calculator</string>
+    <string name="app_name_variant_3" translatable="false">Telegram</string>
+    <string name="app_name_variant_4" translatable="false">Messages</string>
+    <string name="app_name_variant_5" translatable="false">Tic Tac Toe</string>
+    <string name="app_name_variant_6" translatable="false">Settings</string>
+    <string name="app_name_variant_7" translatable="false">Solitaire</string>
+
     <string name="action_save">Save</string>
     <string name="action_configure">Configure</string>
     <string name="action_connect">Connect</string>
@@ -135,6 +144,11 @@
     <string name="help">Help</string>
     <string name="qs_error">Connection error</string>
     <string name="qs_show_error">Show error</string>
+
+    <!-- appearance screen -->
+    <string name="appearance">Appearance</string>
+    <string name="name_and_icon">Name and icon</string>
+    <string name="wallpaper">Wallpaper</string>
 
     <plurals name="n_bridges">
         <item quantity="one">%1$s bridge added</item>
