implement skeletton for offline help pages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,6 +132,7 @@
     <string name="email_bot_subtitle">Email %s</string>
     <string name="web_bot_subtitle">Visit %s</string>
     <string name="remove_bridge">Remove bridge address</string>
+    <string name="help">Help</string>
 
     <plurals name="n_bridges">
         <item quantity="one">%1$s bridge added</item>
